# slime-sim

./: CMakeCache.txt  CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h
src/shaders/: agents.glsl  diffusion_shader.glsl  fragment.glsl  noise_shader.glsl  quad.frag  quad.vert  render_shader.glsl  vertex.glsl
